# allocate_microphones

./: AUTHORS  BUGS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  allocate_microphones-2.1.tar.bz2  allocate_microphones-2.2.tar.bz2  allocate_microphones-2.3.tar.bz2  allocate_microphones-2.5.tar.bz2  allocate_microphones-3.0.tar.bz2  allocate_microphones-3.1.tar.bz2  allocate_microphones-3.10.tar.bz2  allocate_microphones-3.11.tar.bz2  allocate_microphones-3.12.tar.bz2  allocate_microphones-3.2.tar.bz2  allocate_microphones-3.3.tar.bz2  allocate_microphones-3.4.tar.bz2  allocate_microphones-3.5.tar.bz2  allocate_microphones-3.6.tar.bz2  allocate_microphones-3.7.tar.bz2  allocate_microphones-3.8.tar.bz2  allocate_microphones-3.9.tar.bz2  config.status  configure  configure.ac  configure_backup.ac  create_new_test.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
examples/: Makefile  Makefile.am  Makefile.in
examples/Perils_of_Pauline/: Makefile  Makefile.am  Makefile.in  perils.txt  perils.txt.X32TC.sqlite3  perils_microphones.tex  verify_files_template.sh
examples/Perils_of_Pauline/expected_output/: perils.txt.DCA_usage.tex  perils.txt.X32TC.txt  perils.txt.activities.tex  perils.txt.actors.tex  perils.txt.assignments.tex  perils.txt.csv  perils.txt.microphone_channels.tex  perils.txt.microphone_labels.tex  perils.txt.microphone_switching.tex  perils.txt.microphone_switching_annotated.tex  perils.txt.parameters.tex  perils.txt.stage_manager_before_show.tex  perils_microphones.tex  perils_timeline.tex
examples/The_Music_Man/: Makefile  Makefile.am  Makefile.in  Music_Man.txt  Music_Man_microphones.tex  Music_Man_timeline.tex  music_man.txt  music_man.txt.X32TC.sqlite3  music_man_microphones.tex  music_man_timeline.tex  verify_files_template.sh
examples/The_Music_Man/expected_output/: Music_Man.txt  Music_Man.txt.DCA_usage.tex  Music_Man.txt.X32TC.txt  Music_Man.txt.activities.tex  Music_Man.txt.actors.tex  Music_Man.txt.assignments.tex  Music_Man.txt.csv  Music_Man.txt.microphone_channels.tex  Music_Man.txt.microphone_labels.tex  Music_Man.txt.microphone_moves.tex  Music_Man.txt.microphone_switching.tex  Music_Man.txt.microphone_switching_annotated.tex  Music_Man.txt.parameters.tex  Music_Man.txt.stage_manager_after_show.tex  Music_Man.txt.stage_manager_at_intermission.tex  Music_Man.txt.stage_manager_before_show.tex  Music_Man.txt.stage_manager_during_show.tex  music_man.txt.X32TC.txt  music_man.txt.activities.tex  music_man.txt.actors.tex  music_man.txt.assignments.tex  music_man.txt.csv  music_man.txt.microphone_channels.tex  music_man.txt.microphone_labels.tex  music_man.txt.microphone_moves.tex  music_man.txt.microphone_switching.tex  music_man.txt.microphone_switching_annotated.tex  music_man.txt.stage_manager_after_show.tex  music_man.txt.stage_manager_at_intermission.tex  music_man.txt.stage_manager_before_show.tex  music_man.txt.stage_manager_during_show.tex  music_man_microphones.tex  music_man_timeline.tex
man/: Makefile  Makefile.am  Makefile.in  allocate_microphones.1
src/: Makefile  Makefile.am  Makefile.in  allocate_microphones
tests/: Makefile.am  Makefile.in
tests/test001/: Makefile.am  test001.txt  update_expected_output.sh  verify_files_template.sh
tests/test001/expected_output/: test001.txt.DCA_usage.tex  test001.txt.X32TC.txt  test001.txt.actors.tex  test001.txt.assignments.tex  test001.txt.csv  test001.txt.microphone_channels.tex  test001.txt.microphone_switching.tex
tests/test002/: Makefile.am  Makefile.in  test002.txt  test002_microphones.tex  test002_timeline.tex  update_expected_output.sh  verify_files_template.sh
tests/test002/expected_output/: test002.txt.DCA_usage.tex  test002.txt.X32TC.txt  test002.txt.activities.tex  test002.txt.actors.tex  test002.txt.assignments.tex  test002.txt.csv  test002.txt.microphone_channels.tex  test002.txt.microphone_labels.tex  test002.txt.microphone_switching.tex  test002.txt.microphone_switching_annotated.tex  test002.txt.parameters.tex  test002.txt.stage_manager_after_show.tex  test002.txt.stage_manager_before_show.tex
tests/test003/: Makefile.am  Makefile.in  test003.txt  test003.txt~  test003_microphones.tex  test003_timeline.tex  update_expected_output.sh  verify_files_template.sh
tests/test003/expected_output/: test003.txt.DCA_usage.tex  test003.txt.X32TC.txt  test003.txt.activities.tex  test003.txt.actors.tex  test003.txt.assignments.tex  test003.txt.csv  test003.txt.microphone_labels.tex  test003.txt.microphone_switching.tex  test003.txt.microphone_switching_annotated.tex  test003.txt.parameters.tex  test003.txt.stage_manager_before_show.tex
