#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([allocate_microphones],[3.5],[John_Sauter@systemeyescomputerstore.com])
AM_INIT_AUTOMAKE([tar-pax dist-bzip2 no-dist-gzip]) 
AC_CONFIG_SRCDIR([src/allocate_microphones])
AM_MAINTAINER_MODE

# Checks for programs.
AM_PATH_PYTHON([3])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Checks for system services.


AC_CONFIG_FILES([Makefile
                 examples/Makefile
                 examples/Perils_of_Pauline/Makefile
                 examples/The_Music_Man/Makefile
                 man/Makefile
                 src/Makefile])
AC_OUTPUT

